fix overflow background issue

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -7,7 +7,7 @@ body, h1, h2, h3, h4, h5, h6, p, span {
 body::after {
     content: "";
     background-image: url('/assets/background.png');
-    position: absolute;
+    position: fixed;
     top: 0;
     bottom: 0;
     left: 0;
